[gd_scene load_steps=38 format=3 uid="uid://wnblk824usty"]

[ext_resource type="Script" uid="uid://b5132m434yncw" path="res://Script/LaptopLogic/MainLaptop.gd" id="1_64fhu"]
[ext_resource type="Texture2D" uid="uid://bjvfopqmak6qq" path="res://Assets/Laptop/wallpaperflare.com_wallpaper.jpg" id="1_l71r0"]
[ext_resource type="Script" uid="uid://bq8n05iyweuw0" path="res://Script/Resource/Content/MediaContent.gd" id="2_23h8t"]
[ext_resource type="PackedScene" uid="uid://bkxf238exoqs1" path="res://MainScene/Laptop/SocMed.tscn" id="2_64fhu"]
[ext_resource type="Texture2D" uid="uid://ceep3n5deg8sa" path="res://Assets/Laptop/message.png" id="2_da0kx"]
[ext_resource type="Script" uid="uid://cxn12y03namn4" path="res://Script/LaptopLogic/Messager.gd" id="2_iyuat"]
[ext_resource type="Texture2D" uid="uid://n3ck5da8q6v3" path="res://Assets/Laptop/windows-8.png" id="2_mww2q"]
[ext_resource type="Resource" uid="uid://kcrl423popxo" path="res://Contents/Diary/Sample.tres" id="2_nmxhc"]
[ext_resource type="PackedScene" uid="uid://cutswfke3my86" path="res://MainScene/Laptop/Diaary.tscn" id="2_w4rca"]
[ext_resource type="Resource" uid="uid://j3hiab7si2ln" path="res://Contents/MediaContent/Meme1.tres" id="3_vyvxs"]
[ext_resource type="Script" uid="uid://dy73hp4ke0fm5" path="res://Script/Resource/Content/MessageThreadContent.gd" id="3_wj4gt"]
[ext_resource type="Texture2D" uid="uid://djekg6r2kuapi" path="res://Assets/Laptop/diary.png" id="4_mlxj4"]
[ext_resource type="Resource" uid="uid://blvegwy7407hi" path="res://Contents/MessageThread/Jacob.tres" id="4_w4rca"]
[ext_resource type="Resource" uid="uid://v5y0hpenjorg" path="res://Contents/MediaContent/Meme2.tres" id="4_xcqaf"]
[ext_resource type="Resource" uid="uid://d0wudi848j7ay" path="res://Contents/MediaContent/NonSense.tres" id="5_kd3b6"]
[ext_resource type="Shader" uid="uid://xu3r0ydttvq8" path="res://Shader/ProfileCircle.gdshader" id="6_64fhu"]
[ext_resource type="Resource" uid="uid://rd2aam1eg2i0" path="res://Contents/MediaContent/Reid.tres" id="6_vqnaf"]
[ext_resource type="Resource" uid="uid://c1t0dphviwyhr" path="res://Contents/MessageThread/Juli Mantao.tres" id="6_wj4gt"]
[ext_resource type="Texture2D" uid="uid://3farb36jp6k1" path="res://Assets/Laptop/latest-2006512497.svg" id="7_nmxhc"]
[ext_resource type="PackedScene" uid="uid://beqno1bsaiaf0" path="res://MainScene/Laptop/MessageChatBubble.tscn" id="8_i6p15"]
[ext_resource type="Texture2D" uid="uid://ddoevswfw57hw" path="res://Assets/Laptop/like.png" id="9_oxp7o"]
[ext_resource type="Texture2D" uid="uid://bmd0iiym78bp5" path="res://Assets/Laptop/social-media.png" id="15_w4rca"]

[sub_resource type="Gradient" id="Gradient_2rf61"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.026755853, 1)
colors = PackedColorArray(0.15487596, 0.154876, 0.15487596, 1, 0.5409905, 0.5409905, 0.5409905, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l71r0"]
gradient = SubResource("Gradient_2rf61")
fill_from = Vector2(0.5, 0.63247865)
fill_to = Vector2(1, 0.78205127)

[sub_resource type="CanvasTexture" id="CanvasTexture_da0kx"]
diffuse_texture = SubResource("GradientTexture2D_l71r0")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mww2q"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.18359044, 0.18359044, 0.18359044, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vc2tr"]
draw_center = false

[sub_resource type="GDScript" id="GDScript_ugdc3"]
script/source = "extends Node2D



@onready var z_order_handler: Node2D = $AppTop
@onready var messager: CharacterBody2D = $AppTop/Messager
@onready var diary: CharacterBody2D = $AppTop/Diaary
@onready var some: CharacterBody2D = $AppTop/SociaMedya


func on_top(app_id: int):
	match app_id:
		0: z_order_handler.move_child(messager, 2)
		1: z_order_handler.move_child(diary, 2)
		2: z_order_handler.move_child(some, 2)
			
		
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vc2tr"]
size = Vector2(608, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m678x"]
size = Vector2(920, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8tjup"]
bg_color = Color(0.11858138, 0.11858139, 0.11858132, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8tjup"]
shader = ExtResource("6_64fhu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1tbu"]
bg_color = Color(0.25490198, 0.25490198, 0.25490198, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vl0gn"]
bg_color = Color(0.1728327, 0.17283267, 0.17283267, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlxj4"]
bg_color = Color(1, 1, 1, 0.19607843)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_da0kx"]
bg_color = Color(1, 1, 1, 0.19607843)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.35906902, 0.35906914, 0.35906887, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="GDScript" id="GDScript_qoet0"]
script/source = "extends PanelContainer

enum App{ Messager = 0, Diary = 1, SocMed = 2 }

@onready var root: Node2D =  $\"../../..\"
@export var app: App = App.Messager

func _gui_input(event):
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
		root.on_top(app)
"

[node name="MainLaptop" type="TextureRect" node_paths=PackedStringArray("messager", "diaary", "sociamedya")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_da0kx")
script = ExtResource("1_64fhu")
media_contents = Array[ExtResource("2_23h8t")]([ExtResource("3_vyvxs"), ExtResource("4_xcqaf"), ExtResource("5_kd3b6"), ExtResource("6_vqnaf")])
diary_content = ExtResource("2_nmxhc")
messager = NodePath("ApplicationArea/Node2D/AppTop/Messager")
diaary = NodePath("ApplicationArea/Node2D/AppTop/Diaary")
sociamedya = NodePath("ApplicationArea/Node2D/AppTop/SociaMedya")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.99300003
anchor_bottom = 0.98800004
offset_left = -0.06400013
offset_top = 0.22399998
offset_right = 0.063964844
offset_bottom = 0.22399902
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_mww2q")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.007
anchor_top = -0.013
anchor_right = 1.0070001
anchor_bottom = 1.013
offset_left = -0.04799986
offset_top = 0.21600056
offset_right = 0.047851563
offset_bottom = -0.21600342
texture = ExtResource("1_l71r0")
expand_mode = 3
stretch_mode = 6

[node name="Border" type="Panel" parent="."]
z_index = 1
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.99300003
anchor_bottom = 0.98800004
offset_left = -0.06400013
offset_top = 0.22399998
offset_right = 0.063964844
offset_bottom = -0.22399902
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_mww2q")

[node name="ApplicationArea" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.99300003
anchor_bottom = 0.92600006
offset_left = -0.06400013
offset_top = 0.22399998
offset_right = 0.063964844
offset_bottom = 37.951965
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_vc2tr")

[node name="Node2D" type="Node2D" parent="ApplicationArea"]
script = SubResource("GDScript_ugdc3")

[node name="AppTop" type="Node2D" parent="ApplicationArea/Node2D"]

[node name="SociaMedya" parent="ApplicationArea/Node2D/AppTop" instance=ExtResource("2_64fhu")]
position = Vector2(191.99998, 16.999998)
scale = Vector2(0.875, 0.875)

[node name="Messager" type="CharacterBody2D" parent="ApplicationArea/Node2D/AppTop" node_paths=PackedStringArray("chat_box_texture", "chat_box_label")]
position = Vector2(53, 39)
scale = Vector2(0.75, 0.75)
collision_layer = 2
script = ExtResource("2_iyuat")
use_screen_boundaries = false
ready_threads = Array[ExtResource("3_wj4gt")]([ExtResource("4_w4rca"), ExtResource("6_wj4gt")])
chat_box_texture = NodePath("Control/ChatBox/TextureRect2")
chat_box_label = NodePath("Control/ChatBox/Label")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ApplicationArea/Node2D/AppTop/Messager"]
position = Vector2(464, 48)
shape = SubResource("RectangleShape2D_vc2tr")

[node name="Area2D" type="Area2D" parent="ApplicationArea/Node2D/AppTop/Messager"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ApplicationArea/Node2D/AppTop/Messager/Area2D"]
position = Vector2(460, 16)
shape = SubResource("RectangleShape2D_m678x")
debug_color = Color(0, 0.6, 0.69803923, 0)

[node name="Control" type="Control" parent="ApplicationArea/Node2D/AppTop/Messager"]
layout_mode = 3
anchors_preset = 0
offset_right = 920.0
offset_bottom = 648.0
mouse_filter = 1

[node name="ColorRect2" type="ColorRect" parent="ApplicationArea/Node2D/AppTop/Messager/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.24477637, 0.2447764, 0.24477637, 1)

[node name="ColorRect" type="ColorRect" parent="ApplicationArea/Node2D/AppTop/Messager/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.062000003
offset_bottom = -0.1760025
mouse_filter = 1
color = Color(0.08964228, 0.13953215, 0.11071608, 1)

[node name="TextureRect" type="TextureRect" parent="ApplicationArea/Node2D/AppTop/Messager/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.012
anchor_right = 0.043
anchor_bottom = 0.049000002
offset_left = 0.35999775
offset_top = 0.2239995
offset_right = 456.44
offset_bottom = 456.24792
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_da0kx")
expand_mode = 1

[node name="Label" type="Label" parent="ApplicationArea/Node2D/AppTop/Messager/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.052
anchor_top = 0.012
anchor_right = 0.209
anchor_bottom = 0.049000002
offset_left = 0.15999985
offset_top = 0.22399998
offset_right = -70.28
offset_bottom = -0.7520008
text = "Messager"

[node name="Panel" type="Panel" parent="ApplicationArea/Node2D/AppTop/Messager/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.017
anchor_top = 0.074
anchor_right = 0.409
anchor_bottom = 0.975
offset_left = 0.3599987
offset_top = 0.048000336
offset_right = -32.28
offset_bottom = 0.2000122

[node name="ScrollContainer" type="ScrollContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.027
anchor_right = 0.9760001
anchor_bottom = 0.98600006
offset_left = -0.41600037
offset_top = -7.7680006
offset_right = -0.12802124
offset_bottom = 0.17596436
scroll_vertical_custom_step = 5.0
horizontal_scroll_mode = 0

[node name="AccountSlot" type="VBoxContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/Panel/ScrollContainer"]
layout_mode = 2

[node name="ChatBox" type="Panel" parent="ApplicationArea/Node2D/AppTop/Messager/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38300002
anchor_top = 0.074
anchor_right = 0.98300004
anchor_bottom = 0.975
offset_left = -0.36001587
offset_top = 0.048000336
offset_right = -0.3600464
offset_bottom = 0.2000122
theme_override_styles/panel = SubResource("StyleBoxFlat_8tjup")

[node name="TextureRect2" type="TextureRect" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox"]
material = SubResource("ShaderMaterial_8tjup")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.014
anchor_right = 0.116000004
anchor_bottom = 0.082
offset_left = 0.26399994
offset_top = -0.1760006
offset_right = -0.03200531
offset_bottom = 0.11199951
texture = ExtResource("7_nmxhc")
expand_mode = 1

[node name="Label" type="Label" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14500001
anchor_top = 0.027
anchor_right = 0.92800003
anchor_bottom = 0.068
offset_left = -0.040008545
offset_top = 0.2319994
offset_right = -333.25604
offset_bottom = -0.7120018
text = "MARK BORJA"

[node name="Panel" type="Panel" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15900001
anchor_top = 0.93200004
anchor_right = 0.89900005
anchor_bottom = 0.98600006
offset_left = 0.23199463
offset_top = -0.2880249
offset_right = -0.24801636
offset_bottom = 0.17596436
theme_override_styles/panel = SubResource("StyleBoxFlat_s1tbu")

[node name="ChatContainer" type="Panel" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.043
anchor_top = 0.096
anchor_right = 0.957
anchor_bottom = 0.91800004
offset_left = 0.26399994
offset_top = -0.063999176
offset_right = -0.2640381
offset_bottom = -0.11199951
theme_override_styles/panel = SubResource("StyleBoxFlat_vl0gn")

[node name="ScrollContainer" type="ScrollContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BubbleContainer" type="VBoxContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(484, 460)
layout_mode = 2
alignment = 2

[node name="HBoxContainer3" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer" instance=ExtResource("8_i6p15")]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer/HBoxContainer4/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer/HBoxContainer4/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Be there"
autowrap_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer/HBoxContainer5/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox/ChatContainer/ScrollContainer/MarginContainer/BubbleContainer/HBoxContainer5/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "where u at?"
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="ApplicationArea/Node2D/AppTop/Messager/Control/ChatBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.91300005
anchor_top = 0.93200004
anchor_right = 0.9710001
anchor_bottom = 0.98600006
offset_left = 0.023986816
offset_top = -0.2880249
offset_right = 0.00793457
offset_bottom = 0.17596436
texture = ExtResource("9_oxp7o")
expand_mode = 1

[node name="Diaary" parent="ApplicationArea/Node2D/AppTop" instance=ExtResource("2_w4rca")]
position = Vector2(366, 225)
scale = Vector2(0.82, 0.82)
type_per_ms = 0.02

[node name="ColorRect" type="ColorRect" parent="ApplicationArea/Node2D"]
z_index = 1
anchors_preset = -1
anchor_top = 0.93700004
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.095
offset_top = 590.86
offset_right = 1133.0
offset_bottom = 629.44
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.76862746, 0.9764706, 0.99607843, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ApplicationArea/Node2D/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.85
offset_left = 0.04799986
mouse_filter = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mlxj4")

[node name="TextureRect" type="TextureRect" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer/PanelContainer"]
z_index = 4
layout_mode = 2
texture = ExtResource("2_mww2q")
expand_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_da0kx")
script = SubResource("GDScript_qoet0")

[node name="TextureRect" type="TextureRect" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer/PanelContainer2"]
z_index = 4
layout_mode = 2
texture = ExtResource("2_da0kx")
expand_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_da0kx")
script = SubResource("GDScript_qoet0")
app = 1

[node name="TextureRect" type="TextureRect" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer/PanelContainer3"]
z_index = 4
layout_mode = 2
texture = ExtResource("4_mlxj4")
expand_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0.995, 2.295)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_da0kx")
script = SubResource("GDScript_qoet0")
app = 2

[node name="TextureRect" type="TextureRect" parent="ApplicationArea/Node2D/ColorRect/HBoxContainer/PanelContainer4"]
z_index = 4
layout_mode = 2
size_flags_stretch_ratio = 8.37
texture = ExtResource("15_w4rca")
expand_mode = 2

[node name="Area2D" type="StaticBody2D" parent="ApplicationArea/Node2D"]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ApplicationArea/Node2D/Area2D"]
polygon = PackedVector2Array(3, 4, 3, 590, 1133, 590, 1133, 3, 5, 3, 5, 0, 1136, 0, 1136, 593, 0, 592, 0, 0, 3, 0)

[connection signal="mouse_entered" from="Panel" to="ApplicationArea/Node2D/ColorRect/HBoxContainer/PanelContainer4" method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="ApplicationArea/Node2D/AppTop/Messager/Area2D" to="ApplicationArea/Node2D/AppTop/Messager" method="_mouse_entered"]
[connection signal="mouse_exited" from="ApplicationArea/Node2D/AppTop/Messager/Area2D" to="ApplicationArea/Node2D/AppTop/Messager" method="_mouse_exited"]
